# evaluizer

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  PROVIDER_GUIDE.md  pyproject.toml
backend/app/: config.py  database.py  main.py  utils.py
backend/app/api/: routes.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: csv.py  evaluation.py  function_eval.py  function_eval_config.py  gepa.py  judge.py  llm.py  metric.py  prompt.py
backend/app/config/: llm_models.py
backend/app/llm_config/: llm_models.py
backend/app/models/: __init__.py  csv_data.py  evaluation.py  function_eval.py  gepa.py  judge.py  metric.py  prompt.py  user.py
backend/app/schemas/: csv_data.py  evaluation.py  function_eval.py  gepa.py  judge.py  metric.py  prompt.py
backend/app/services/: function_eval_service.py  gepa_progress.py  gepa_service.py  judge_service.py  llm_service.py  user_service.py
backend/app/services/providers/: README.md  __init__.py  anthropic_provider.py  base.py  openai_provider.py  registry.py
database/: .gitignore
evaluations/: README.md  pyproject.toml
evaluations/src/evaluations/: __init__.py  base.py  registry.py
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Button.tsx  CSVFileList.tsx  CSVUpload.tsx  CombinedEvaluationsPanel.tsx  DataTable.tsx  FunctionEvaluationsPanel.tsx  JudgeEvaluationsPanel.tsx  LLMConfigPanel.tsx  (+2 more)
testing_datasets/: pii_dataset_20.csv
(+9 files in other folders)
