[project]
name = "evaluizer"
version = "0.1.0"
description = "Lightweight interface for evaluating and optimizing LLM prompts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "litellm>=1.0.0",
    "gepa>=0.0.22",
]
